# CppSkilledType

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Tests/: CMakeLists.txt  SkilledTypeTest.cpp
include/: Crtp.h  SkilledType.h  Skills.h
misc/: appveyorTestRunScript.bat
